--- a/admin.html
+++ b/admin.html
@@ -118,6 +118,8 @@
   // ✅ Admin login logic
   const admins = {
     "waqas": "waqas2025",
+    "ahmed": "ahmed2025",
+    "nameer": "nameer2025",
     "azoz": "azoz2025"
   };
 
