--- a/index.html
+++ b/index.html
@@ -108,51 +108,20 @@
       }
 
       // 2️⃣ Send plain-text WhatsApp via UltraMsg
-      async function sendWhatsAppConfirmation(phone, message) {
-    const url = "https://api.ultramsg.com/instance117965/messages/chat";
-    const body = {
-      token: "7rn5yw3sjmdr3hnf",
-      to: phone,
-      body: message
-    };
-    let lastError = null;
+      // … inside your form-submission async function, after response.ok …
 
-    for (let attempt = 1; attempt <= 2; attempt++) {
-      try {
-        const res = await fetch(url, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Accept": "application/json"
-          },
-          body: JSON.stringify(body)
-        });
+// 1️⃣ Sanitize & normalize phone
+let raw = document.getElementById('phone').value;
+let digits = raw.replace(/\D+/g, '');           // keep only 0–9
+if (digits.startsWith('0')) {                    // if they typed 07xxxx
+  digits = '964' + digits.slice(1);              // replace leading 0 with 964
+} else if (!digits.startsWith('964')) {          // if they typed e.g. 771234567
+  digits = '964' + digits;
+}
+const to = '+' + digits;                         // +964771234567
 
-        if (!res.ok) {
-          throw new Error(`HTTP ${res.status}`);
-        }
-
-        const data = await res.json();
-        // UltraMsg returns { sent: true, … } when successful
-        if (data.sent || data.status === "sent") {
-          return true;
-        } else {
-          lastError = new Error("UltraMsg responded with status: " + data.status);
-        }
-      } catch (err) {
-        console.error(`WhatsApp send attempt ${attempt} failed:`, err);
-        lastError = err;
-      }
-      // small delay before retry
-      await new Promise(r => setTimeout(r, 500));
-    }
-
-    console.error("All WhatsApp send attempts failed:", lastError);
-    return false;
-  }
-
-  // inside your form-submission async function, after your Supabase fetch:
-  const message = `مرحباً ${name}،
+// 2️⃣ Build your WhatsApp message
+const message = `مرحباً ${name}،
 يسرّ فريق رؤيا – اللجنة المنظمة أن يُعلن عن قبولكم للمشاركة في المعرض والمؤتمر العالمي العراقي لطب الأسنان، والذي سيُقام في
  
 📍قاعة الأبرار – الجادرية - بغداد
@@ -174,13 +143,37 @@
 مع خالص التقدير،
 تيم رؤيا – اللجنة المنظمة للمعرض والمؤتمر العراقي العالمي لطب الأسنان`;
 
-  const sent = await sendWhatsAppConfirmation(phone, message);
+// 3️⃣ Send via UltraMsg with logging
+try {
+  const res = await fetch(
+    "https://api.ultramsg.com/instance117965/messages/chat", {
+      method: "POST",
+      mode: "cors",
+      headers: {
+        "Content-Type": "application/json",
+        "Accept": "application/json"
+      },
+      body: JSON.stringify({
+        token: "7rn5yw3sjmdr3hnf",
+        to,
+        body: message
+      })
+    }
+  );
+  console.log("📤 UltraMsg HTTP status:", res.status);
+  const data = await res.json();
+  console.log("📥 UltraMsg response:", data);
 
-  if (sent) {
+  if (data.sent || data.status === "sent") {
     alert("✅ تم التسجيل وإرسال رسالة تأكيد عبر واتساب.");
   } else {
-    alert("✅ تم التسجيل، لكن حدثت مشكلة في إرسال رسالة واتساب.");
+    console.warn("⚠️ UltraMsg did not send:", data);
+    alert("✅ تم التسجيل، لكن لم يتم إرسال رسالة واتساب.");
   }
+} catch (err) {
+  console.error("❌ Fetch error sending WhatsApp:", err);
+  alert("✅ تم التسجيل، ولكن حدث خطأ في إرسال رسالة واتساب.");
+}
 
   document.getElementById('registrationForm').reset();
     });
