--- a/index.html
+++ b/index.html
@@ -143,36 +143,40 @@ const message = `مرحباً ${name}،
 مع خالص التقدير،
 تيم رؤيا – اللجنة المنظمة للمعرض والمؤتمر العراقي العالمي لطب الأسنان`;
 
-// 3️⃣ Send via UltraMsg with logging
 try {
-  const res = await fetch(
-    "https://api.ultramsg.com/instance117965/messages/chat", {
-      method: "POST",
-      mode: "cors",
-      headers: {
-        "Content-Type": "application/json",
-        "Accept": "application/json"
-      },
-      body: JSON.stringify({
-        token: "7rn5yw3sjmdr3hnf",
-        to,
-        body: message
-      })
-    }
-  );
-  console.log("📤 UltraMsg HTTP status:", res.status);
+  console.log("📤 Sending WhatsApp to:", phone);
+  console.log("📩 Message body:", message);
+
+  const res = await fetch("https://api.ultramsg.com/instance117965/messages/chat", {
+    method: "POST",
+    mode: "cors",
+    cache: "no-store",
+    headers: {
+      "Content-Type": "application/json",
+      "Accept": "application/json"
+    },
+    body: JSON.stringify({
+      token: "7rn5yw3sjmdr3hnf",
+      to: phone,
+      body: message
+    })
+  });
+
+  console.log("📥 HTTP status:", res.status);
+
   const data = await res.json();
-  console.log("📥 UltraMsg response:", data);
+  console.log("📥 UltraMsg response JSON:", data);
 
   if (data.sent || data.status === "sent") {
     alert("✅ تم التسجيل وإرسال رسالة تأكيد عبر واتساب.");
   } else {
-    console.warn("⚠️ UltraMsg did not send:", data);
-    alert("✅ تم التسجيل، لكن لم يتم إرسال رسالة واتساب.");
+    console.warn("⚠️ UltraMsg did not send. Response:", data);
+    alert("⚠️ تم التسجيل، لكن لم يتم إرسال رسالة واتساب.");
   }
+
 } catch (err) {
-  console.error("❌ Fetch error sending WhatsApp:", err);
-  alert("✅ تم التسجيل، ولكن حدث خطأ في إرسال رسالة واتساب.");
+  console.error("❌ Error sending WhatsApp:", err);
+  alert("❌ حدث خطأ أثناء إرسال رسالة واتساب.");
 }
 
   document.getElementById('registrationForm').reset();
