--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 مع خالص التقدير،
 تيم رؤيا – اللجنة المنظمة للمعرض والمؤتمر العراقي العالمي لطب الأسنان`;
 
-await fetch("https://https://orange-spoonbill-894434.hostingersite.com/ultramsg-proxy.php", {
+await fetch("https://orange-spoonbill-894434.hostingersite.com/ultramsg-proxy.php", {
   method: "POST",
   headers: {
     "Content-Type": "application/json"
