--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
       <label for="phone">رقم الهاتف</label>
       <div class="note">يجب أن يحتوي على واتساب – مثال: 077xxxxxxxx</div>
       <input type="tel" id="phone" name="phone" required />
-      <label for="occupation">المهنة</label>
-      <div class="note">يرجى اختيار المهنة من القائمة</div>
+      <label for="occupation">اختر حضورك</label>
       <select id="occupation" name="occupation" required>
         <option value="">اختر المهنة</option>
         <option value="طالب">طالب</option>
