--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <input type="tel" id="phone" name="phone" required />
       <label for="occupation">اختر حضورك</label>
       <select id="occupation" name="occupation" required>
-        <option value="">اختر المهنة</option>
+        <option value="">اختر حضورك</option>
         <option value="طالب">طالب</option>
         <option value="طبيب أسنان">طبيب أسنان</option>
         <option value="تقني صناعة أسنان">تقني صناعة أسنان</option>
