--- a/index.html
+++ b/index.html
@@ -108,26 +108,33 @@
 
       // 2️⃣ Send plain-text WhatsApp via UltraMsg
       const message = `مرحباً ${name}،
-يسرّ فريق رؤيا – اللجنة المنظمة أن يُعلن عن قبولكم للمشاركة في المعرض والمؤتمر العالمي العراقي لطب الأسنان، والذي سيُقام في
- 
-📍قاعة الأبرار – الجادرية - بغداد
+**يسرّ فريق شركة رؤيا 
 
-وذلك في يومي 30 و31 من شهر أيار (مايو) 2025
- 
-بحضور نخبة من الاطباء وتقنيي صناعة الاسنان  الدوليين، ومشاركة واسعة من شركات ومراكز عالمية رائدة في مجالات طب الأسنان وتقنيات صناعة الأسنان.
+أن يُعلن عن قبولكم للمشاركة في المؤتمر العالمي العراقي لطب الأسنان، 
+والذي سيُقام في قاعة الأبرار – الجادرية، 
+في يومي 30 و31 الجمعة والسبت 
+من شهر الخامس 2025، 
+بحضور نخبة من اطباء الاسنان وتقنيي 
+صناعة الاسنان من دول مختلفة 
+عروض ومفاجات وهدايا
+ من الشركات والمكاتب العلمية و وكالات رسمية مشاركة 
 
-🔹رسوم الاشتراك: 35,000 دينار عراقي فقط
-🔹لتأكيد حجز مقعدكم، يرجى تسديد الرسوم عبر أحد الأرقام التالية:
-زين كاش 
+🔹 رسوم الاشتراك: 35,000 دينار عراقي فقط
+🔹 لتأكيد حجز مقعدكم، يرجى تسديد الرسوم عبر أحد الأرقام التالية: 
 
-د. [وقاص الكرخي] – [ 07732934320  ]
+[د.عبد العزيز حسين] 
+زين كاش [ 07763315131 ]
+او ماستر كارد: 1998186140
 
-[عز الدين حسين]  –   [ 07763315131 ]
+[د.وقاص الكرخي] 
+زين كاش [ 07732934320 ]
 
-✨ المقاعد محدودة، والمشاركة المسبقة تضمن لكم مكانًا بين نخبة المتخصصين، وفرصة استثنائية لبناء علاقات مهنية واستكشاف فرص جديدة.
+📍بعد التحويل يرجى التاكيد برسالة على الواتساب.
 
-مع خالص التقدير،
-تيم رؤيا – اللجنة المنظمة للمعرض والمؤتمر العراقي العالمي لطب الأسنان`;
+✨ المقاعد محدودة لحضور المؤتمر  
+
+مع خالص الشكر و التقدير،
+اللجنة المنظمة للمؤتمر`;
 
 await fetch("https://orange-spoonbill-894434.hostingersite.com/ultramsg-proxy.php", {
   method: "POST",
