--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       color: #333;
       direction: rtl;
     }
+
     .container {
       background-color: #fff;
       opacity: 0.9;
@@ -24,18 +25,37 @@
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-    .header { text-align: center; margin-bottom: 20px; }
-    .header img { max-width: 300px; }
-    .header h1 { font-size: 22px; margin: 10px 0 0; color: #a72828; }
-    label { display: block; margin-top: 15px; margin-bottom: 5px; font-weight: bold; }
-    .note { font-size: 13px; color: #555; margin-top: 5px; }
-    input, select {
+
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .header img {
+      max-width: 300px;
+    }
+
+    .header h1 {
+      font-size: 22px;
+      margin: 10px 0 0;
+      color: #a72828;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
     }
+
     button {
       margin-top: 20px;
       background-color: #a72828;
@@ -46,8 +66,40 @@
       width: 100%;
       font-size: 16px;
       cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    button:hover { background-color: #8c1e1e; }
+
+    button:hover {
+      background-color: #8c1e1e;
+    }
+
+    .note {
+      font-size: 13px;
+      color: #555;
+      margin-top: 5px;
+    }
+
+    .spinner {
+      border: 2px solid #ffffff;
+      border-top: 2px solid #a72828;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      animation: spin 0.7s linear infinite;
+      margin-right: 8px;
+      display: inline-block;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -65,10 +117,10 @@
       <label for="occupation">اختر حضورك</label>
       <select id="occupation" name="occupation" required>
         <option value="">اختر حضورك</option>
-        <option value="طالب">طالب</option>
         <option value="طبيب أسنان">طبيب أسنان</option>
         <option value="تقني صناعة أسنان">تقني صناعة أسنان</option>
         <option value="أستاذ جامعي">أستاذ جامعي</option>
+        <option value="طالب">طالب</option>
         <option value="زائر">زائر</option>
         <option value="أخرى">أخرى</option>
       </select>
@@ -85,10 +137,15 @@
       const phone = document.getElementById('phone').value.trim();
       const occupation = document.getElementById('occupation').value;
 
-      // (Optional) ensure international format if needed:
-      // if (!phone.startsWith('+964')) phone = '+964' + phone.replace(/^0+/, '');
+     const submitBtn = document.getElementById('submitBtn');
+      const spinner = submitBtn.querySelector('.spinner');
+      const btnText = submitBtn.querySelector('.btn-text');
 
-      // 1️⃣ Save to Supabase
+      submitBtn.disabled = true;
+      spinner.classList.remove('hidden');
+      btnText.textContent = "جاري الإرسال...";
+
+      try {
       const response = await fetch(
         "https://uckmsmyfjsspbgbrwvzf.supabase.co/rest/v1/Registration", {
         method: "POST",
@@ -154,14 +211,16 @@ await fetch("https://orange-spoonbill-894434.hostingersite.com/ultramsg-proxy.ph
     alert("✅ تم التسجيل، لكن لم يتم إرسال رسالة واتساب.");
     console.warn("⚠️ UltraMsg response:", result);
   }
-})
-.catch(err => {
-  alert("❌ حدث خطأ أثناء إرسال الرسالة.");
-  console.error("Fetch error:", err);
-});
+document.getElementById('registrationForm').reset();
 
+      } catch (err) {
+        alert("❌ حدث خطأ أثناء إرسال الرسالة.");
+        console.error("Fetch error:", err);
+      }
 
-      document.getElementById('registrationForm').reset();
+      submitBtn.disabled = false;
+      spinner.classList.add('hidden');
+      btnText.textContent = "تسجيل";
     });
   </script>
 </body>
