--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       color: #333;
       direction: rtl;
     }
-
     .container {
       background-color: #fff;
       opacity: 0.9;
@@ -25,37 +24,18 @@
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-
-    .header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .header img {
-      max-width: 300px;
-    }
-
-    .header h1 {
-      font-size: 22px;
-      margin: 10px 0 0;
-      color: #a72828;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    input {
+    .header { text-align: center; margin-bottom: 20px; }
+    .header img { max-width: 300px; }
+    .header h1 { font-size: 22px; margin: 10px 0 0; color: #a72828; }
+    label { display: block; margin-top: 15px; margin-bottom: 5px; font-weight: bold; }
+    .note { font-size: 13px; color: #555; margin-top: 5px; }
+    input, select {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
     }
-
     button {
       margin-top: 20px;
       background-color: #a72828;
@@ -66,40 +46,8 @@
       width: 100%;
       font-size: 16px;
       cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
-
-    button:hover {
-      background-color: #8c1e1e;
-    }
-
-    .note {
-      font-size: 13px;
-      color: #555;
-      margin-top: 5px;
-    }
-
-    .spinner {
-      border: 2px solid #ffffff;
-      border-top: 2px solid #a72828;
-      border-radius: 50%;
-      width: 18px;
-      height: 18px;
-      animation: spin 0.7s linear infinite;
-      margin-right: 8px;
-      display: inline-block;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+    button:hover { background-color: #8c1e1e; }
   </style>
 </head>
 <body>
@@ -137,15 +85,10 @@
       const phone = document.getElementById('phone').value.trim();
       const occupation = document.getElementById('occupation').value;
 
-      const submitBtn = document.getElementById('submitBtn');
-      const spinner = submitBtn.querySelector('.spinner');
-      const btnText = submitBtn.querySelector('.btn-text');
+      // (Optional) ensure international format if needed:
+      // if (!phone.startsWith('+964')) phone = '+964' + phone.replace(/^0+/, '');
 
-      submitBtn.disabled = true;
-      spinner.classList.remove('hidden');
-      btnText.textContent = "جاري الإرسال...";
-
-      try {
+      // 1️⃣ Save to Supabase
       const response = await fetch(
         "https://uckmsmyfjsspbgbrwvzf.supabase.co/rest/v1/Registration", {
         method: "POST",
@@ -204,25 +147,21 @@ await fetch("https://orange-spoonbill-894434.hostingersite.com/ultramsg-proxy.ph
   })
 })
 .then(async res => {
-   const result = await send.json();
+  const result = await res.json();
+  if (result.sent || result.status === "sent") {
+    alert("✅ تم التسجيل وإرسال تفاصيل الحجز عبر الواتساب.");
+  } else {
+    alert("✅ تم التسجيل، لكن لم يتم إرسال رسالة الواتساب.");
+    console.warn("⚠️ UltraMsg response:", result);
+  }
+})
+.catch(err => {
+  alert("❌ حدث خطأ أثناء إرسال الرسالة.");
+  console.error("Fetch error:", err);
+});
 
-        if (result.sent || result.status === "sent") {
-          alert("✅ تم التسجيل وإرسال رسالة تأكيد عبر واتساب.");
-        } else {
-          alert("✅ تم التسجيل، لكن لم يتم إرسال رسالة واتساب.");
-          console.warn("⚠️ UltraMsg response:", result);
-        }
 
-        document.getElementById('registrationForm').reset();
-
-      } catch (err) {
-        alert("❌ حدث خطأ أثناء إرسال الرسالة.");
-        console.error("Fetch error:", err);
-      }
-
-      submitBtn.disabled = false;
-      spinner.classList.add('hidden');
-      btnText.textContent = "تسجيل";
+      document.getElementById('registrationForm').reset();
     });
   </script>
 </body>
