--- a/admin.html
+++ b/admin.html
@@ -102,10 +102,10 @@
 <div class="note">يرجى اختيار المهنة من القائمة</div>
 <select id="occupation" name="occupation" required>
   <option value="">اختر المهنة</option>
-  <option value="طالب">طالب</option>
   <option value="طبيب أسنان">طبيب أسنان</option>
   <option value="تقني صناعة أسنان">تقني صناعة أسنان</option>
   <option value="أستاذ جامعي">أستاذ جامعي</option>
+  <option value="طالب">طالب</option>
   <option value="زائر">زائر</option>
   <option value="أخرى">أخرى</option>
 </select>
@@ -118,9 +118,9 @@
   // ✅ Admin login logic
   const admins = {
     "waqas": "waqas2025",
-    "ahmed": "ahmed2025",
-    "nameer": "nameer2025",
-    "azoz": "azoz2025"
+    "ahmed": "00058",
+    "nameer": "135790",
+    "azoz": "azoz1234"
   };
 
   function login() {
