--- a/admin.html
+++ b/admin.html
@@ -173,7 +173,7 @@
         width: 512,
         height: 512,
         data: unique_id,
-        image: "logo.PNG",
+        image: "logoqr.PNG",
         dotsOptions: { color: "#a72828", type: "rounded" },
         cornersSquareOptions: { type: "extra-rounded", color: "#a72828" },
         cornersDotOptions: { type: "dot", color: "#a72828" },
