--- a/admin.html
+++ b/admin.html
@@ -211,11 +211,11 @@
 
 نتطلع لرؤيتك!`;
 
-      const send = await fetch("https://api.ultramsg.com/instance119620/messages/image", {
+      const send = await fetch("https://api.ultramsg.com/instance117965/messages/image", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
-          token: "fyzwbesykk06yqtx",
+          token: "7rn5yw3sjmdr3hnf",
           to: phone,
           image: base64QR,
           caption: message
