--- a/admin.html
+++ b/admin.html
@@ -215,7 +215,7 @@
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
-          token: "7rn5yw3sjmdr3hnf",
+          token: "155p5d8i614t6a2b",
           to: phone,
           image: base64QR,
           caption: message
