Update title and header for IPC conference

--- a/checkin.html
+++ b/checkin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>نظام تسجيل الدخول - IQIDS</title>
+  <title>نظام تسجيل الدخول - IPC</title>
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <style>
     body {
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h2>نظام تسجيل الحضور - مؤتمر IQIDS</h2>
+  <h2>نظام تسجيل الحضور - مؤتمر IPC</h2>
   <div id="reader"></div>
   <div id="result" class="result-box info">📷 استخدم الكاميرا لمسح رمز QR</div>
   <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
