--- a/checkin.html
+++ b/checkin.html
@@ -64,10 +64,10 @@
     }
 
     async function markCheckedIn(uid) {
-      const url = "https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees?unique_id=eq." + uid;
+      const url = "https://qwsjadikpeireuvncxli.supabase.co/rest/v1/attendees?unique_id=eq." + uid;
       const headers = {
-        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
+        "apikey": "sb_publishable_fd6qXhmf46bpcjTtuQSvmQ_1trMWQJY",
+        "Authorization": "Bearer sb_publishable_fd6qXhmf46bpcjTtuQSvmQ_1trMWQJY",
         "Content-Type": "application/json",
         "Prefer": "return=representation"
       };
@@ -87,7 +87,7 @@
         return;
       }
 
-      const updateRes = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees?unique_id=eq." + uid, {
+      const updateRes = await fetch("https://qwsjadikpeireuvncxli.supabase.co/rest/v1/attendees?unique_id=eq." + uid, {
         method: "PATCH",
         headers,
         body: JSON.stringify({ check_in_status: true, check_in_time: new Date().toISOString() })
