--- a/admin.html
+++ b/admin.html
@@ -174,9 +174,9 @@
         height: 512,
         data: unique_id,
         image: "logoqr.PNG",
-        dotsOptions: { color: "#a72828", type: "rounded" },
-        cornersSquareOptions: { type: "extra-rounded", color: "#a72828" },
-        cornersDotOptions: { type: "dot", color: "#a72828" },
+        dotsOptions: { color: "#edae39", type: "rounded" },
+        cornersSquareOptions: { type: "extra-rounded", color: "#edae39" },
+        cornersDotOptions: { type: "dot", color: "#edae39" },
         backgroundOptions: { color: "#ffffff" },
         imageOptions: { crossOrigin: "anonymous", imageSize: 0.2 }
       });
@@ -193,7 +193,7 @@
       ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
       ctx.drawImage(imgBitmap, 0, 0);
 
-      ctx.fillStyle = "#a72828";
+      ctx.fillStyle = "#edae39";
       ctx.font = "22px Tajawal, sans-serif";
       ctx.textAlign = "center";
       ctx.fillText(name, 256, 560);
