Change QR code colors from #edae39 to #070e4d

--- a/admin.html
+++ b/admin.html
@@ -162,9 +162,9 @@
         height: 512,
         data: unique_id,
         image: "logoqr.PNG",
-        dotsOptions: { color: "#edae39", type: "rounded" },
-        cornersSquareOptions: { type: "extra-rounded", color: "#edae39" },
-        cornersDotOptions: { type: "dot", color: "#edae39" },
+        dotsOptions: { color: "#070e4d", type: "rounded" },
+        cornersSquareOptions: { type: "extra-rounded", color: "#070e4d" },
+        cornersDotOptions: { type: "dot", color: "#070e4d" },
         backgroundOptions: { color: "#ffffff" },
         imageOptions: { crossOrigin: "anonymous", imageSize: 0.2 }
       });
@@ -181,7 +181,7 @@
       ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
       ctx.drawImage(imgBitmap, 0, 0);
 
-      ctx.fillStyle = "#edae39";
+      ctx.fillStyle = "#070e4d";
       ctx.font = "22px Tajawal, sans-serif";
       ctx.textAlign = "center";
       ctx.fillText(name, 256, 560);
