Revise Arabic message for conference registration
Updated the welcome message and conference details in Arabic.

--- a/admin.html
+++ b/admin.html
@@ -188,16 +188,24 @@
 
       const base64QR = finalCanvas.toDataURL("image/png");
 
-      const message = `مرحباً ${name}،
+      const message = `مرحبا د. ${name}،
 
-شكرًا لتسجيلك في مؤتمر ICIPC 🎓
+شكرا لتسجيلكم في مؤتمر ICIPC 🎓
 
-يرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.
+يرجى الاحتفاظ برمز QR المرفق،
+ إذ يُستخدم حصراً للدخول
 
-📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.
 🚫 لا تشارك هذا الرمز مع أي شخص آخر.
 
-نتطلع لرؤيتك!`;
+تفاصيل المؤتمر:
+📍 بغداد – قاعة إبريز، مجمع النخيل، مجاور جسر الجادرية، مقابل منطقة السيدية
+📅 13–14 / 2 / 2026
+⏰ 9:00 صباحًا – 4:00 عصرًا
+
+نتطلع لحضوركم الكريم.
+
+مع فائق الاحترام،
+اللجنة التنظيمية للمؤتمر`;
 
       const send = await fetch("https://api.ultramsg.com/instance148231/messages/image", {
         method: "POST",
