Update entry message for conference QR code

--- a/admin.html
+++ b/admin.html
@@ -193,7 +193,7 @@
 شكرا لتسجيلكم في مؤتمر ICIPC 🎓
 
 يرجى الاحتفاظ برمز QR المرفق،
- إذ يُستخدم حصراً للدخول
+ إذ يُستخدم حصراً للدخول الى المؤتمر
 
 🚫 لا تشارك هذا الرمز مع أي شخص آخر.
 
