--- a/admin.html
+++ b/admin.html
@@ -34,7 +34,7 @@
     .header h1 {
       font-size: 22px;
       margin: 10px 0 0;
-      color: #a72828;
+      color: #d6b42b;
     }
     label {
       display: block;
@@ -51,7 +51,7 @@
     }
     button {
       margin-top: 20px;
-      background-color: #a72828;
+      background-color: #d6b42b;
       color: white;
       border: none;
       padding: 12px;
