Change button hover background color

--- a/admin.html
+++ b/admin.html
@@ -61,7 +61,7 @@
       cursor: pointer;
     }
     button:hover {
-      background-color: #8c1e1e;
+      background-color: #e0c453;
     }
     .note {
       font-size: 13px;
